<resources>
    <string name="app_name">HelloDoctor</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="password">Mật khẩu</string>
    <string name="reenter_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng kí</string>
    <string name="name">Họ tên</string>
    <string name="address">Địa chỉ</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="major">Chuyên khoa</string>
    <string name="workplace">Nơi công tác</string>
    <string name="link_createAccount"><u>Chưa có tài khoản? Đăng kí ngay!</u></string>
    <string name="link_alreadyAMember">Đã là thành viên? Đăng nhập!</string>
    <string name="creatAccount">Tạo tài khoản</string>
    <string name="auth_failed">Lỗi đăng nhập</string>
    <string name="facebook_app_id">1279264815462147</string>
    <string name="title_activity_newsfeed">Bảng tin</string>
    <string name="logging_in">Đang đăng nhập&#8230;</string>
    <string name="creating_account">Đang tạo tài khoản&#8230;</string>
    <string name="create_account_successfully">Đăng kí tài khoản thành công</string>
    <string name="create_account_unsuccessfully">Đăng kí tài khoản không thành công</string>
    <string name="email_error">enter a valid email address</string>
    <string name="please_sign_in_again">Vui lòng đăng nhập lại!</string>
    <string name="enter_valid_email">Định dạng email không đúng</string>
    <string name="enter_valid_password">Mật khẩu có từ 4 đến 10 ký tự</string>
    <string name="enter_valid_name">Ít nhất 3 ký tự</string>
    <string name="enter_valid_address">Vui lòng nhập địa chỉ chính xác</string>
    <string name="enter_valid_phone_number">Số điện thoại phải có ít nhất 10 ký tự số</string>
    <string name="enter_matched_password">Mật khẩu không khớp</string>
    <string name="welcome_to_doctor">Chào mừng bạn đến với phòng mạch bác sỹ </string>
    <string name="confirm_appointment">Xác nhận lịch khám?</string>
    <string name="appointment_success">Đặt lịch khám thành công!</string>
    <string name="diamond_da_dat_lich_kham_luc">đã đặt lịch khám gói DIAMOND lúc</string>
    <string name="ho_so_cap_nhat_thanh_cong">Hồ sơ đã được cập nhật thành công</string>
    <string name="cv_no_info">Chưa có thông tin</string>
    <string name="cv_doctor">HỒ SƠ BÁC SỸ</string>
    <string name="sche_update_successfully">Cập nhật lịch khám thành công!</string>
    <string name="sche_1">LỊCH KHÁM</string>
    <string name="post_too_short">Tiêu đề hoặc nội dung có vẻ quá ngắn, hãy thử viết chi tiết hơn</string>
    <string name="goodbye">\nTạm biệt!\nTrước khi rời đi, hãy xem qua một số mẹo vặt để khỏe mạnh hơn mỗi ngày&#8230;</string>
    <string name="goodbye_walk">\nĐI BỘ 10,000 BƯỚC MỖI NGÀY\n\nViệc đi bộ 10.000 bước mỗi ngày tương đương với quãng đường đi được 8 km và mất khoảng 2,5 giờ vận động thể chất.</string>
    <string name="goodbye_water">\nUỐNG ĐỦ LƯỢNG NƯỚC CẦN THIẾT\n\nVề công thức, lượng nước cần cho 1 kg cơ thể trong điều kiện bình thường là 40ml. Một người nặng 50kg cần 2 lít nước mỗi ngày là đủ.</string>
    <string name="goodbye_mosquito">\nSỬ DỤNG VITAMIN B1 ĐỂ TRÁNH MUỖI ĐỐT\n\nKhi sử dụng Vitamin B1 và tỏi, cơ thể bạn sẽ sản xuất ra một loại mùi hương gây khó chịu cho muỗi nhưng mùi hương này khó phát hiện bởi con người. Vì vậy, bạn có thể sử dụng vitamin B1 3 lần/ ngày để tránh bị muỗi đốt.</string>

    <string name="link1">https://edoctor.io/dich-vu/goi-kham-tong-quat-va-chuyen-khoa-nu.html</string>
    <string name="link2">https://edoctor.io/dich-vu/kham-tong-quat-nam.html</string>
    <string name="link3">https://edoctor.io/dich-vu/huyetap-hvlab.html</string>
    <string name="link4">https://edoctor.io/dich-vu/uxo-tucung-bson.html</string>
    <string name="link5">https://edoctor.io/dich-vu/danh-muc/dieu-duong.html</string>
    <string name="link6">https://edoctor.io/dich-vu/danh-muc/vat-ly-tri-lieu.html</string>
    <string name="link7">https://edoctor.io/dich-vu/danh-muc/kham-benh-tai-nha.html</string>
</resources>
